trybuild_tests/tests/trybuild/pass/newtype_int.rs
use butane::FieldType;

#[derive(FieldType)]
struct UserId(i32);

fn main() {}
